--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,9 @@ env/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Built website directories
+dist/
+
+# Python virtual environments
+.venv/
